<resources>
    <string name="app_name">QuakeWatch</string>
    <string name="API">API_KEY</string>
    <string name="perceived_strength">perceived strength</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coordinates">coordinates:</string>
    <string name="here">USGS DYFI?</string>
    <string name="felt_the_earthquake_submit_your_response_at">Did you feel it?</string>
    <string name="textview">TextView</string>
    <string name="number_of_people_who_felt_this_earthquake">Number of People who felt this earthquake:</string>
    <string name="coordinates_">TextView</string>
    <string name="visit_usgs_website">Visit USGS webSite</string>
    <string name="share">share</string>
    <string name="todo">TODO</string>
    <string name="submit_your_response_at">submit your response at:</string>
    <string name="no_int">check your internet connection</string>
    <string name="no_data">Problem connecting to server</string>
    <string name="filter"><u>FILTER</u></string>
    <string name="settings"><u>THEME</u></string>
    <string name="theme">Theme:</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system_default">System Default</string>
    <string name="map_theme">Map Theme:</string>
    <string name="simple">Simple</string>
    <string name="dark_map">Dark</string>
    <string name="retro">Retro</string>
    <string name="night">Night</string>
    <string name="silver">Silver</string>
    <string name="aubergine">Aubergine</string>
    <string name="satellite">Satellite</string>
    <string name="system_default_map">System default</string>
    <string name="done">done</string>
    <string name="search">search</string>
    <string name="NEWS"><u>NEWS</u></string>
    <string name="college"><u>G H Patel College of Engineering and Technology</u></string>
</resources>